--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^16.2.0",
     "react-sticky": "^6.0.1",
     "react-stickynode": "^1.4.1",
+    "react-visibility-sensor": "^3.11.0",
     "scrollmagic": "^2.0.5",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
